One more little bits text edits

--- a/templates/index.html
+++ b/templates/index.html
@@ -121,7 +121,7 @@ Welcome! Ver descriptions allocated here:
 					<h2 class="font-weight-light py-2 text-truncate">Статус порта<br>Онлайн</h2>
                     <div class="text-muted">
                         <h6 class="font-weight-light">ver 0.2.0 (alpha release)</h6>
-                        При любом сбое попробуйте <u>перезагрузить страницу</u> и повторите действия заново.
+                        При любом сбое попробуйте <u>перезагрузить страницу</u> и повторите действия заново (Ctrl+F5).
                     </div>
 					<div class="form-group px-2">
 						<form name="update" method="get" action="api/update" class="justify-content-center">
