add request timeout handler

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background: #222 url("../wallpaper-3.jpg");
+    background: #222 url("../wallpaper-3.jpg") center top no-repeat;
     background-size: unset;
 }
 
