--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@ Welcome! Ver descriptions allocated here:
 (alpha)
 0.1.4 - style, update cancel by button
 0.2.0 - auto error logging, widget for consumer alpha testing reports
+0.2.1 - add request timeout handler
 
 --->
 <!DOCTYPE html>
