EXTRA big improvements: bug fixes; fast IronSNMP class was made; more informative monitoring output added (uptime and port errors); transparent style for tables in tables added; web-interface was optimized a bit.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -24,6 +24,10 @@ form:before {
     border-radius: 5px;
 }
 
+table table.table-sm {
+    background: rgba(0,0,0,0);
+}
+
 #status_row {
     transition: all 0.6s;
 }
