Mega code restructure, include of uwsgi and interface upgrades

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,5 +1,5 @@
 html {
-    background: #222 url("../background/wallpaper-3.jpg") center center no-repeat fixed;
+    background: #222 url("../jpg/sauronport.jpg") center center no-repeat fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
