--- a/templates/base.html
+++ b/templates/base.html
@@ -5,28 +5,54 @@
     <title>
         {{ title }}
     </title>
-    {% for script in libs.scripts %}
-        <script src="{{ script }}"></script>
-    {% endfor %}
-    {% for css in libs.css %}
-        <link rel="stylesheet" href={{ css }}>
-    {% endfor %}
-    <script type="text/javascript"
-            src="{{ url_for('static', filename='js/index.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.4.1.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/fontawesome.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/popper.min.1.16.0.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.4.4.1.js') }}"></script>
     <link rel="stylesheet"
-          href="{{ url_for('static', filename='css/main.css') }}">
-    <link rel="stylesheet"
-          href="{{ url_for('static', filename='css/base.css') }}">
+          href="{{ url_for('static', filename='css/bootstrap_4.4.1.css') }}">
+{% block imports %}{% endblock %}
 </head>
+{% block style %}{% endblock %}
+<style>
+    body { background-color:rgba(0,0,0,0); }
+    footer {
+        position:fixed;
+        height:25px;
+        width:100%;
+        bottom:1%;
+        opacity:0.8;
+        color:#d4d4d4;
+        pointer-events:none;
+    }
+    .navbar { background-color: #00141E; }
+    #ironnet-img {
+        border-style:hidden;
+        width:155px;
+        height:30px;
+        background: url(http://ironnet.info/static/img/png/sprite.png) -10px 0;
+        opacity:1;
+    }
+</style>
 <header>
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
     <div class="container">
+        {% if title != 'IronnetCups' %}
         <a class="navbar-brand" href="http://ironnet.info/">
             <div id="ironnet-img"></div>
         </a>
+        {% else %}
+        <div class="w-100 text-center">
+            <a class="navbar-brand" href="http://ironnet.info/">
+                <div id="ironnet-img"></div>
+            </a>
+        </div>
+        {% endif %}
+        {% if title != 'IronnetCups' %}
         <a class="navbar-brand" href={{ main_url }}>
             {{ title }}
         </a>
+        {% endif %}
         <div class="navbar-toggler-div">
             <div class="text-right">
                 <button class="navbar-toggler justify-content-start" type="button" data-toggle="collapse"
@@ -36,6 +62,7 @@
                 </button>
             </div>
         </div>
+        {% if title != 'IronnetCups' %}
         <div class="collapse navbar-collapse  justify-content-start" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
@@ -52,6 +79,7 @@
                 </li>
             </ul>
         </div>
+        {% endif %}
     </div>
 </nav>
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="banner-about" aria-hidden="true" id="banner-about">
