code optimize and html template logo fix

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
         border-style:hidden;
         width:155px;
         height:30px;
-        background: url(http://ironnet.info/static/img/png/sprite.png) -10px 0;
+        background: url(https://cup.ironnet.info/static/png/sprite.png) -10px 0;
         opacity:1;
     }
 </style>
