--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@ html {
                     Введите логин и пароль для доступа к коммутатору:<br />
                     <div class="form-group col-5">
                         <label class="sr-only" for="input-login">Логин</label>
-                        <input id="input-login" type=text placeholder="Логин" class="form-control form-control-sm">
+                        <input id="input-login" type=text placeholder="Логин" class="form-control form-control-sm" value="admin">
                     </div>
                     <div class="form-group col-5">
                         <label class="sr-only" for="input-password">Пароль</label>
